--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
+:root {
+  --primary-color: #7065EF;
+  --gray-color: #D4D4D8;
+  --gray-text: #A1A1AA;
+  --white-text: #ffffff;
+  --base-font-family: 'Inter', sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: var(--base-font-family);
+  font-size: medium;
 }
