--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --light-primary-background: #F8F7FD;
   --gray-color: #D4D4D8;
   --black-color: #000000;
+  --white-color: #ffffff;
   --dark-gray-text: #5b5b5f;
   --gray-text: #A1A1AA;
   --white-text: #ffffff;
@@ -18,5 +19,5 @@ body {
 }
 
 .page {
-  padding: 3% 11%;
+  padding: 3% 12%;
 }
