property card ui

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --dark-gray-text: #5b5b5f;
   --gray-text: #A1A1AA;
   --white-text: #ffffff;
-  --base-font-family: 'Inter', sans-serif;
+  --base-font-family: 'Roboto', sans-serif;
 }
 
 body {
