card ui changes and favorite click functionality

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -19,7 +19,7 @@
     top: -10%;
     background-color: var(--primary-color);
     width: max-content;
-    padding: 5px 15px 2px;
+    padding: 5px 15px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
@@ -38,23 +38,26 @@
 }
 
 .popular-tag img {
-    width: 15px;
-    height: 18px;
-    margin-right: 5px;
+    width: 13px;
+    height: 15px;
+    margin-right: 5p34
 }
 
 .favorite{
     position: absolute;
     right: 1.25rem;
+    top: 9%;
     border-radius: 9999px;
     border: 1px solid var(--gray-color);
-    padding: 7px;
-    height: 16px;
-    width: 16px;
+    /* padding: 7px; */
+    height: 34px;
+    width: 34px;
 }
 
 .favorite img{
     width: 16px;
+    height: 16px;
+    margin-top: 2px;
 }
 
 .card-img img{
@@ -64,7 +67,7 @@
     border-top-right-radius: 0.5rem;
 }
 
-.price {
+.price .period, .address {
     color: var(--gray-text);
     font-size: small;
 }
@@ -84,8 +87,7 @@
 
 .address {
     margin-top: 7px;
-    color: var(--gray-text);
-    font-size: small;
+    letter-spacing: 0.5px;
 }
 
 .ammenities {
@@ -117,5 +119,9 @@
 .ammenity sup {
     position: absolute;
     top: -14%;
+}
+
+.ammenity-name span {
+    font-size: x-small;
 }
 
